--- a/index.html
+++ b/index.html
@@ -96,6 +96,63 @@
         <div class="row justify-content-center mx-1 mx-md-0">
           <div class="card-deck col-12 col-sm-8 col-md-6 col-lg-4 mb-5 mb-lg-3">
             <div class="card project-card bg-dark">
+              <img
+                class="card-img-top"
+                src="https://images.unsplash.com/photo-1487730116645-74489c95b41b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2FtcGdyb3VuZHxlbnwwfHwwfHx8MA%3D%3D"
+                alt="Bologna"
+              />
+              <div class="card-body bg-light">
+                <h4 class="card-title">Indian-YelpCamp</h4>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <span class="html">HTML</span>
+                  <span class="css">CSS</span>
+                  <span class="java">JAVASCRIPT</span>
+                  <span class="node">NODE.JS</span>
+                  <span class="mongo">MONGODB</span>
+                  <span class="express">EXPRESS.JS</span>
+                </h6>
+                <a
+                  href="https://github.com/SaranaDheeraj/Indian-YelpCamp-Project"
+                  class="card-link"
+                  >Read More</a
+                >
+                <a href="http://indian-yelpcamp.onrender.com/" class="card-link"
+                  >Website Link</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="card-deck col-12 col-sm-8 col-md-6 col-lg-4 mb-5 mb-lg-3">
+            <div class="card project-card bg-dark">
+              <img
+                class="card-img-top"
+                src="https://images.unsplash.com/photo-1601134467661-3d775b999c8b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8d2VhdGhlcnxlbnwwfDB8MHx8fDA%3D"
+                alt="Bologna"
+              />
+              <div class="card-body bg-light">
+                <h4 class="card-title">Weather Application</h4>
+                <h6 class="card-subtitle mb-2 text-muted">
+                  <span class="html">HTML</span>
+                  <span class="css">CSS</span>
+                  <span class="java">JAVASCRIPT</span>
+                </h6>
+                <a
+                  href="https://github.com/SaranaDheeraj/Weather-City-App"
+                  class="card-link"
+                  >Read More</a
+                >
+                <a
+                  href="https://saranadheeraj.github.io/Weather-City-App/"
+                  class="card-link"
+                  >Website Link</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="card-deck col-12 col-sm-8 col-md-6 col-lg-4 mb-5 mb-lg-3">
+            <div class="card project-card bg-dark">
               <img class="card-img-top" src="img_1.webp" alt="Bologna" />
               <div class="card-body bg-light">
                 <h4 class="card-title">Omnifood Project</h4>
